force-app/main/default/objects/OpportunityLineItem/fields/BM_Cost__c.field-meta.xml
<CustomField>
    <fullName>BM_Cost__c</fullName>
    <label>BM Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>