force-app/main/default/objects/OpportunityLineItem/fields/Is_Recurring_Fee__c.field-meta.xml
<CustomField>
    <fullName>Is_Recurring_Fee__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Recurring Fee?</label>
    <type>Checkbox</type>
</CustomField>