force-app/main/default/objects/OpportunityLineItem/fields/Partner_Cost__c.field-meta.xml
<CustomField>
    <fullName>Partner_Cost__c</fullName>
    <label>Partner Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>