force-app/main/default/objects/OpportunityLineItem/fields/Payment_Term_Client_Days__c.field-meta.xml
<CustomField>
    <fullName>Payment_Term_Client_Days__c</fullName>
    <label>Payment Term - Client (Days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>