force-app/main/default/objects/OpportunityLineItem/validationRules/CannotAddIfLocationSanctioned.validationRule-meta.xml
<ValidationRule>
    <fullName>CannotAddIfLocationSanctioned</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
OR(
ISNEW(),
ISCHANGED(UnitPrice)
),
Opportunity.Risk_Rating_Score_Location__r.Is_Sanctioned__c 
)</errorConditionFormula>
    <errorMessage>Cannot add or modify Products when Location is sanctioned.</errorMessage>
</ValidationRule>